2008-12-19  Mark Ellis <mark@mpellis.org.uk>

	* added synce: as a protocol, rapip: will deprecated
	* renamed LICENSE to COPYING to satisfy build system
	* added mime type description for Pocket Word & Excel

2008-08-11  Mark Ellis <mark@mpellis.org.uk>

	* configure.in.in - increase version to 0.10

2008-07-08  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* rapip/rapip.lsm: Changed incorrect license field from GPL to MIT.
	* COPYING (deleted): Removed pointless GPL file.

2008-05-18  Mark Ellis <mark@mpellis.org.uk>

	* rapip.cpp: to not attempt to ascii() filename in 
	  list_matching_files, for non-ascii character sets, thanks
	  Yakov Shereshevsky

2008-04-23  Mark Ellis <mark@mpellis.org.uk>

	* update build to enable use of automake 1.10

2008-02-20  Mark Ellis <mark@mpellis.org.uk>

	* establish connection with rapi_connection_* instead of
	  filename functions, compatible with all dccm's

2008-02-06 01:02  Mark Ellis <mark@mpellis.org.uk>

	* split rapip out of synce-kde

2005-02-24 01:02  voc

	* amd64/gcc-4.0 compile fix

2004-08-28 21:50  voc

	* Doxyfile: New Doxyfile

2004-08-28 21:49  voc

	* Makefile.am: Add orange.m4 to acinclude.m4

2004-08-28 21:46  voc

	* raki/plugins/agsync/: agsyncconfigimpl.cpp, agsyncconfigimpl.h:
	  Then cancel button now really cancels

2004-08-28 21:45  voc

	* raki/plugins/agsync/clients/: .cvsignore, Makefile.am,
	  smelter.rarm.CAB, smelter.rmips.CAB, smelter.rsh3.CAB: Remove the
	  AvantGo client binaries ... i will ask sourceforge to remove them
	  also from the filesystem.

2004-08-28 21:43  voc

	* raki/plugins/agsync/: agsync.cpp,
	  avantgoclientinstallationdialog.ui,
	  avantgoclientinstallationdialogimpl.cpp,
	  avantgoclientinstallationdialogimpl.h: The AvantGo client isn't
	  installed automatically anymore ... some code and a dialog added
	  to support gui-based manual installation of the client.

2004-08-28 21:42  voc

	* raki/plugins/agsync/Makefile.am: Format change

2004-08-28 21:41  voc
